force-app/main/default/objects/ApplicationForm/fields/DAOApplicationId__c.field-meta.xml
<CustomField>
    <fullName>DAOApplicationId__c</fullName>
    <description>External ID from  for Application Form. Used for upsert operations and deduplication.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DAO Application ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>