force-app/main/default/objects/ApplicationForm/fields/Generate_Documents__c.field-meta.xml
<CustomField>
    <fullName>Generate_Documents__c</fullName>
    <label>Generate Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Application</fullName>
            </value>
            <value>
                <fullName>Signature Card</fullName>
            </value>
            <value>
                <fullName>Disclosures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>