force-app/main/default/objects/ApplicationForm/fields/StepKey__c.field-meta.xml
<CustomField>
    <fullName>StepKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StepKey</label>
    <length>55</length>
    <type>Text</type>
</CustomField>